--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "framer-motion": "^12.4.1",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
