--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
